# StoreCast

./: .gitignore  404.html  README.md  config.py  data.dvc  duckdb_profile.json  dvc.yaml  index.html  mkdocs.yaml  pyproject.toml
.dvc/: config
01_business_context/: index.html
01a_business_metrics_math/: index.html
02_architecture_tradeoffs/: index.html
03_medallion_architecture/: index.html
04_mlops_infrastructure/: index.html
06_model_card/: index.html
07_forecasting_horizon/: index.html
08_model_explainability/: index.html
09_batch_inference_architecture/: index.html
10_anomaly_detection/: index.html
11_market_basket_analysis/: index.html
12_store_clustering/: index.html
13_mlops_testing_strategy/: index.html
config/: params.yaml
configuration_runbook/: index.html
data/: .gitignore  raw.dvc
data_contract/: index.html
docs/: 01_business_context.md  01a_business_metrics_math.md  02_architecture_tradeoffs.md  02_data_strategy_pipeline.md  03_medallion_architecture.md  04_mlops_infrastructure.md  05_debugging_war_stories.md  06_model_card.md  07_forecasting_horizon.md  08_model_explainability.md  09_batch_inference_architecture.md  10_anomaly_detection.md  11_market_basket_analysis.md  12_store_clustering.md  13_mlops_testing_strategy.md  business_context_problem.md  configuration_runbook.md  data_contract.md  feasibility_report.md  index.md  manual_flow.md  roadmap.md
feasibility_report/: index.html
manual_flow/: index.html
notebooks/: 01_baseline.ipynb  01_data_assessment.ipynb  03_silver_eda.ipynb  04_time_series_analysis.ipynb  (+8 more)
(+77 files in other folders)
